gcc/testsuite/rust/rustc/ui/issues/issue-29161.rs
mod a {
    struct A;

    impl Default for A {
        pub fn default() -> A { // { dg-error ".E0449." "" { target *-*-* } }
            A
        }
    }
}


fn main() {
    a::A::default();
// { dg-error ".E0603." "" { target *-*-* } .-1 }
 }

